SimpleAnimator/src/parser/AslParser.java
// $ANTLR 3.4 /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g 2016-06-01 21:42:08

package parser;
import interp.AslTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
* Copyright (c) 2011, Jordi Cortadella
* All rights reserved.
*
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are met:
* * Redistributions of source code must retain the above copyright
* notice, this list of conditions and the following disclaimer.
* * Redistributions in binary form must reproduce the above copyright
* notice, this list of conditions and the following disclaimer in the
* documentation and/or other materials provided with the distribution.
* * Neither the name of the <organization> nor the
* names of its contributors may be used to endorse or promote products
* derived from this software without specific prior written permission.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
* ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
* WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
* DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
* DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
* (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
* LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
* ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
* (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
* SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCESATTRIBUTE", "AND", "ANIMATION", "ARGLIST", "ASSIGN", "ATTRIBUTE", "ATTRIBUTES", "BEGIN", "BOOLEAN", "COMMENT", "COND_EQUAL", "CREATE", "DEFINE", "DEFINES", "DESTROY", "DIV", "DOUBLE", "DURATION", "ELSE", "ELSEIF", "END", "ENDFOR", "ENDFUNC", "ENDIF", "ENDWHILE", "EQUAL", "ESC_SEQ", "FALSE", "FILE", "FOR", "FUNC", "FUNCALL", "GE", "GROUP", "GT", "ID", "IF", "IMPORT", "IMPORTS", "IN", "INT", "LE", "LIST_FUNCTIONS", "LIST_INSTR", "LT", "MINUS", "MOD", "MODIFY", "MODULE", "MOVE", "MUL", "NOT", "NOT_EQUAL", "OR", "PARAMS", "PLUS", "PREF", "PROG", "READ", "RETURN", "ROTATE", "SCALE", "SOURCE", "STRING", "TIMEANNOTATION", "TRANSLATE", "TRUE", "TYPE_OBJECT", "WHILE", "WRITE", "WS", "'('", "')'", "','", "'.'", "':'", "';'", "'@'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int ACCESATTRIBUTE=4;
    public static final int AND=5;
    public static final int ANIMATION=6;
    public static final int ARGLIST=7;
    public static final int ASSIGN=8;
    public static final int ATTRIBUTE=9;
    public static final int ATTRIBUTES=10;
    public static final int BEGIN=11;
    public static final int BOOLEAN=12;
    public static final int COMMENT=13;
    public static final int COND_EQUAL=14;
    public static final int CREATE=15;
    public static final int DEFINE=16;
    public static final int DEFINES=17;
    public static final int DESTROY=18;
    public static final int DIV=19;
    public static final int DOUBLE=20;
    public static final int DURATION=21;
    public static final int ELSE=22;
    public static final int ELSEIF=23;
    public static final int END=24;
    public static final int ENDFOR=25;
    public static final int ENDFUNC=26;
    public static final int ENDIF=27;
    public static final int ENDWHILE=28;
    public static final int EQUAL=29;
    public static final int ESC_SEQ=30;
    public static final int FALSE=31;
    public static final int FILE=32;
    public static final int FOR=33;
    public static final int FUNC=34;
    public static final int FUNCALL=35;
    public static final int GE=36;
    public static final int GROUP=37;
    public static final int GT=38;
    public static final int ID=39;
    public static final int IF=40;
    public static final int IMPORT=41;
    public static final int IMPORTS=42;
    public static final int IN=43;
    public static final int INT=44;
    public static final int LE=45;
    public static final int LIST_FUNCTIONS=46;
    public static final int LIST_INSTR=47;
    public static final int LT=48;
    public static final int MINUS=49;
    public static final int MOD=50;
    public static final int MODIFY=51;
    public static final int MODULE=52;
    public static final int MOVE=53;
    public static final int MUL=54;
    public static final int NOT=55;
    public static final int NOT_EQUAL=56;
    public static final int OR=57;
    public static final int PARAMS=58;
    public static final int PLUS=59;
    public static final int PREF=60;
    public static final int PROG=61;
    public static final int READ=62;
    public static final int RETURN=63;
    public static final int ROTATE=64;
    public static final int SCALE=65;
    public static final int SOURCE=66;
    public static final int STRING=67;
    public static final int TIMEANNOTATION=68;
    public static final int TRANSLATE=69;
    public static final int TRUE=70;
    public static final int TYPE_OBJECT=71;
    public static final int WHILE=72;
    public static final int WRITE=73;
    public static final int WS=74;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AslParser.tokenNames; }
    public String getGrammarFileName() { return "/home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:64:1: prog : ( imports defines list_func -> ^( PROG imports defines list_func ) | module_def imports defines list_func -> ^( PROG module_def imports defines list_func ) );
    public final AslParser.prog_return prog() throws RecognitionException {
        AslParser.prog_return retval = new AslParser.prog_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.imports_return imports1 =null;

        AslParser.defines_return defines2 =null;

        AslParser.list_func_return list_func3 =null;

        AslParser.module_def_return module_def4 =null;

        AslParser.imports_return imports5 =null;

        AslParser.defines_return defines6 =null;

        AslParser.list_func_return list_func7 =null;


        RewriteRuleSubtreeStream stream_defines=new RewriteRuleSubtreeStream(adaptor,"rule defines");
        RewriteRuleSubtreeStream stream_list_func=new RewriteRuleSubtreeStream(adaptor,"rule list_func");
        RewriteRuleSubtreeStream stream_module_def=new RewriteRuleSubtreeStream(adaptor,"rule module_def");
        RewriteRuleSubtreeStream stream_imports=new RewriteRuleSubtreeStream(adaptor,"rule imports");
        try {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:64:6: ( imports defines list_func -> ^( PROG imports defines list_func ) | module_def imports defines list_func -> ^( PROG module_def imports defines list_func ) )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==DEFINE||LA1_0==FUNC||LA1_0==IMPORT) ) {
                alt1=1;
            }
            else if ( (LA1_0==MODULE) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:64:8: imports defines list_func
                    {
                    pushFollow(FOLLOW_imports_in_prog107);
                    imports1=imports();

                    state._fsp--;

                    stream_imports.add(imports1.getTree());

                    pushFollow(FOLLOW_defines_in_prog109);
                    defines2=defines();

                    state._fsp--;

                    stream_defines.add(defines2.getTree());

                    pushFollow(FOLLOW_list_func_in_prog111);
                    list_func3=list_func();

                    state._fsp--;

                    stream_list_func.add(list_func3.getTree());

                    // AST REWRITE
                    // elements: defines, imports, list_func
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (AslTree)adaptor.nil();
                    // 64:34: -> ^( PROG imports defines list_func )
                    {
                        // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:64:37: ^( PROG imports defines list_func )
                        {
                        AslTree root_1 = (AslTree)adaptor.nil();
                        root_1 = (AslTree)adaptor.becomeRoot(
                        (AslTree)adaptor.create(PROG, "PROG")
                        , root_1);

                        adaptor.addChild(root_1, stream_imports.nextTree());

                        adaptor.addChild(root_1, stream_defines.nextTree());

                        adaptor.addChild(root_1, stream_list_func.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:65:7: module_def imports defines list_func
                    {
                    pushFollow(FOLLOW_module_def_in_prog131);
                    module_def4=module_def();

                    state._fsp--;

                    stream_module_def.add(module_def4.getTree());

                    pushFollow(FOLLOW_imports_in_prog133);
                    imports5=imports();

                    state._fsp--;

                    stream_imports.add(imports5.getTree());

                    pushFollow(FOLLOW_defines_in_prog135);
                    defines6=defines();

                    state._fsp--;

                    stream_defines.add(defines6.getTree());

                    pushFollow(FOLLOW_list_func_in_prog137);
                    list_func7=list_func();

                    state._fsp--;

                    stream_list_func.add(list_func7.getTree());

                    // AST REWRITE
                    // elements: defines, imports, module_def, list_func
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (AslTree)adaptor.nil();
                    // 65:44: -> ^( PROG module_def imports defines list_func )
                    {
                        // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:65:47: ^( PROG module_def imports defines list_func )
                        {
                        AslTree root_1 = (AslTree)adaptor.nil();
                        root_1 = (AslTree)adaptor.becomeRoot(
                        (AslTree)adaptor.create(PROG, "PROG")
                        , root_1);

                        adaptor.addChild(root_1, stream_module_def.nextTree());

                        adaptor.addChild(root_1, stream_imports.nextTree());

                        adaptor.addChild(root_1, stream_defines.nextTree());

                        adaptor.addChild(root_1, stream_list_func.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class module_def_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "module_def"
    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:68:1: module_def : MODULE ^ ID ';' !;
    public final AslParser.module_def_return module_def() throws RecognitionException {
        AslParser.module_def_return retval = new AslParser.module_def_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token MODULE8=null;
        Token ID9=null;
        Token char_literal10=null;

        AslTree MODULE8_tree=null;
        AslTree ID9_tree=null;
        AslTree char_literal10_tree=null;

        try {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:68:12: ( MODULE ^ ID ';' !)
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:68:14: MODULE ^ ID ';' !
            {
            root_0 = (AslTree)adaptor.nil();


            MODULE8=(Token)match(input,MODULE,FOLLOW_MODULE_in_module_def160); 
            MODULE8_tree = 
            (AslTree)adaptor.create(MODULE8)
            ;
            root_0 = (AslTree)adaptor.becomeRoot(MODULE8_tree, root_0);


            ID9=(Token)match(input,ID,FOLLOW_ID_in_module_def163); 
            ID9_tree = 
            (AslTree)adaptor.create(ID9)
            ;
            adaptor.addChild(root_0, ID9_tree);


            char_literal10=(Token)match(input,80,FOLLOW_80_in_module_def165); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "module_def"


    public static class imports_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "imports"
    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:1: imports : ( iimport )* -> ^( IMPORTS ( iimport )* ) ;
    public final AslParser.imports_return imports() throws RecognitionException {
        AslParser.imports_return retval = new AslParser.imports_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.iimport_return iimport11 =null;


        RewriteRuleSubtreeStream stream_iimport=new RewriteRuleSubtreeStream(adaptor,"rule iimport");
        try {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:9: ( ( iimport )* -> ^( IMPORTS ( iimport )* ) )
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:11: ( iimport )*
            {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:11: ( iimport )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IMPORT) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:11: iimport
            	    {
            	    pushFollow(FOLLOW_iimport_in_imports175);
            	    iimport11=iimport();

            	    state._fsp--;

            	    stream_iimport.add(iimport11.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: iimport
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 71:20: -> ^( IMPORTS ( iimport )* )
            {
                // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:23: ^( IMPORTS ( iimport )* )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(IMPORTS, "IMPORTS")
                , root_1);

                // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:71:33: ( iimport )*
                while ( stream_iimport.hasNext() ) {
                    adaptor.addChild(root_1, stream_iimport.nextTree());

                }
                stream_iimport.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "imports"


    public static class iimport_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "iimport"
    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:74:1: iimport : IMPORT ! FILE ';' !;
    public final AslParser.iimport_return iimport() throws RecognitionException {
        AslParser.iimport_return retval = new AslParser.iimport_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token IMPORT12=null;
        Token FILE13=null;
        Token char_literal14=null;

        AslTree IMPORT12_tree=null;
        AslTree FILE13_tree=null;
        AslTree char_literal14_tree=null;

        try {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:74:9: ( IMPORT ! FILE ';' !)
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:74:11: IMPORT ! FILE ';' !
            {
            root_0 = (AslTree)adaptor.nil();


            IMPORT12=(Token)match(input,IMPORT,FOLLOW_IMPORT_in_iimport194); 

            FILE13=(Token)match(input,FILE,FOLLOW_FILE_in_iimport197); 
            FILE13_tree = 
            (AslTree)adaptor.create(FILE13)
            ;
            adaptor.addChild(root_0, FILE13_tree);


            char_literal14=(Token)match(input,80,FOLLOW_80_in_iimport199); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "iimport"


    public static class defines_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "defines"
    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:77:1: defines : ( define )* -> ^( DEFINES ( define )* ) ;
    public final AslParser.defines_return defines() throws RecognitionException {
        AslParser.defines_return retval = new AslParser.defines_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.define_return define15 =null;


        RewriteRuleSubtreeStream stream_define=new RewriteRuleSubtreeStream(adaptor,"rule define");
        try {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:77:9: ( ( define )* -> ^( DEFINES ( define )* ) )
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:77:11: ( define )*
            {
            // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:77:11: ( define )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DEFINE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/guillem/Dropbox/FIB/Quadri8/CL/SimpleAnimator/Practica-CL/SimpleAnimator/src/parser/Asl.g:77:11: define
            	    {
            	    pushFollow(FOLLOW_define_in_defines209);
            	    define15=define();

            	    state._fsp--;

            	    stream_define.add(define15.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

